# ai-writing-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  HANDOVER.md  MANUAL.md  PENDING_DECISIONS.md  PHASE10_COMPLETE.md  PHASE10_FINAL.md  PHASE10_SUMMARY.md  PREP_PHASE_4_5.md  PROJECT_PHASES.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REQUIREMENTS.md  ROADMAP.md  SETUP.md  playwright.config.ts  pyproject.toml  railway.json  test_ollama.py
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: backend-ci.yml  ci.yml  deploy.yml  e2e-tests.yml  frontend-ci.yml
api/: README.md  __init__.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt
api/data/: history.db
api/routers/: __init__.py  __init___fixed.py  analyze.py  generate.py  health.py  history.py  stats.py
api/tests/: conftest.py  test_api.py  test_seo_analyzer.py  test_websocket.py
automation/: README.md  cli.py  manager.py  manager_fixed.py  requirements.txt
config/: config.yaml
config/clients/: default.yaml  ollama.yaml
docs/: BEGINNERS_GUIDE.md  COMPLETE_GUIDE.md  DEPLOYMENT.md  MONETIZATION_TUTORIAL.md  SETUP_FOR_TESTING.md  TESTING.md
e2e/: complete-flow.spec.ts
frontend/: jest.config.ts  package-lock.json  package.json  vercel.json
frontend/__tests__/: generate-page.test.tsx  page.test.tsx  progress-page.test.tsx
frontend/app/: page.tsx
frontend/app/generate/: page.tsx
frontend/app/progress/: page.tsx
frontend/hooks/: use-dashboard.ts  use-websocket.ts
prompts/blog/: 01_search_intent.yaml  02_structure.yaml  03_title.yaml  04_lead.yaml  05_body.yaml  06_summary.yaml  07_image_generation.yaml
prompts/youtube/: 01_search_intent.yaml  02_structure.yaml  03_intro_ending.yaml  04_body.yaml
prompts/yukkuri/: 01_search_intent.yaml  02_structure.yaml  03_script.yaml
scripts/: test_openai.py
src/ai_writing/: __init__.py  __main__.py  cli.py
templates/: blog_default.json  youtube_default.json  yukkuri_default.json
tests/: __init__.py  conftest.py  test_seo_analyzer.py
tests/test_pipeline/: __init__.py  test_base.py  test_blog_pipeline.py  test_docs_integration.py  test_youtube_pipeline.py  test_yukkuri_pipeline.py
tests/test_stages/: test_docs_output.py  test_image_generation.py
tests/test_templates/: __init__.py  test_engine.py  test_renderer.py
(+59 files in other folders)
